variables.RunFour.scala.code
var b=0
while(!(b==4){
  avance()
  if(estSurBiscuit()){
    b+=1
  }
}